--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/express-session": "^1.17.4",
+    "@types/node-fetch": "^2.5.12",
     "bootstrap": "^5.1.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "mongoose": "^6.0.5",
+    "node-fetch": "^2.6.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
