--- a/example.config.json
+++ b/example.config.json
@@ -1,5 +1,6 @@
 {
     "clientId": "DiscordBotClientId",
     "clientSecret": "DiscordBotClientSecret",
-    "password": "password"
+    "password": "password",
+    "secret": "secret"
 }
