Update Wiki service
version up 0.0.1 to 0.1.0
connect to mongoDB , change DB json to mongodb
add submit handler
add DB call service
add Editor detector
add alert for data load event

--- a/example.config.json
+++ b/example.config.json
@@ -2,5 +2,6 @@
     "clientId": "DiscordBotClientId",
     "clientSecret": "DiscordBotClientSecret",
     "password": "password",
-    "secret": "secret"
+    "secret": "secret",
+    "Editor": ["editor_userId"]
 }
