--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "shatagon",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
@@ -10,6 +11,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/express-session": "^1.17.4",
+    "@types/mongoose": "^5.11.97",
     "@types/node-fetch": "^2.5.12",
     "bootstrap": "^5.1.0",
     "express": "^4.17.1",
