--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/node-fetch": "^2.5.12",
     "bootstrap": "^5.1.0",
+    "discord.js": "^13.1.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "mongoose": "^6.0.5",
