--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "discord.js": "^13.1.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "moment-timezone": "^0.5.33",
     "mongoose": "^6.0.5",
     "node-fetch": "^2.6.2",
     "react": "^17.0.2",
